# doepy

./: MANIFEST.in  README.md  Readme.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
_readme/: README.md
docs/: conf.py  index.md  index.rst
doepy3/: __init__.py  build.py  doe_functions.py  pydoe_corrected.py  read_write.py
doepy3/Data/: params.json
doepy3/Test/: build_test.py  doe_test1.py  read_write_test.py  system_test.py
doepy3/Test/doepy/: build.py  doe_functions.py
doepy3_test/: build_test.py  read_write_test.py  system_test.py  test_environment.py
doepy3_test/Data/: params.csv  params.json
fluidon_doepy/: __init__.py  build.py  doe_functions.py
fluidon_doepy/Test/: doe_test1.py
fluidon_doepy/Test/doepy/: build.py  doe_functions.py  pydoe_corrected.py
