[project]
name = "fluidon-doepy"
version = "0.0.2"
authors = [
    { name='Tirthajyoti Sarkar', email="tirthajyoti@gmail.com" },
    { name="Oliver Breuer", email="oliver.breuer@fluidon.com" },
]
description = "Design of experiments generator with simple CSV input/output options"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fluidon-sw/doepy"
"Bug Tracker" = "https://github.com/fluidon-sw/doepy/issues"