[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "doepy3"
version = "0.0.9"
authors = [
    { name='Tirthajyoti Sarkar', email="tirthajyoti@gmail.com" },
    { name="Oliver Breuer", email="oliver.breuer@fluidon.com" },
    { name="Adrian Stöckl", email="adrian.stoeckl@gmail.com"},
]
description = "Design of experiments generator with simple CSV input/output options"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyDOE3",
    "numpy",
    "pandas",
    "diversipy"
]

[project.urls]
"Homepage" = "https://github.com/tectas/doepy"
"Bug Tracker" = "https://github.com/tectas/doepy/issues"